# kube_trim

./: Dockerfile  README.md  deployment.yaml  kubetop.py  pyproject.toml
kube_trim/: report.html  server.py
